# linkedin-ai-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  deps.py  main.py  schemas.py  security.py
app/models/: email_verification.py  oauth_state.py  post.py  repo_cache.py  user.py
app/routers/: admin.py  auth.py  generate.py  posts.py
app/services/: deepseek.py  email.py  github.py  linkedin.py  otp.py  scheduler.py
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/posts/: page.tsx
frontend/src/app/compose/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/app/settings/: SettingsClient.tsx  page.tsx
frontend/src/app/verify-email/: page.tsx
frontend/src/components/: Field.tsx  Nav.tsx  PostCard.tsx  Providers.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  auth.ts  format.ts  types.ts  useRequireAdmin.ts
