[project]
name = "linkedin-ai-agent"
version = "0.1.0"
description = "AI-powered LinkedIn post scheduler using DeepSeek + FastAPI + MongoDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.55.0",
    "beanie>=1.27.0",
    "pymongo>=4.9.0",
    "apscheduler>=3.10.4,<4.0.0",
    "httpx>=0.28.0",
    "authlib>=1.3.2",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
